--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
     "express": "^4.17.1",
+    "fs": "^0.0.1-security",
     "node": "^14.7.0",
     "nodemon": "^2.0.4"
   }
